syntax = "proto3";

package product;

option go_package = "MarketShop/cmd/product;product";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (EmptyResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message Product {
  int64 id = 1;
  string product_name = 2;
  string description = 3;
  double price = 4;
  int64 category_id = 5;  // Added
  int64 inventory_id = 6; // Added
}

message CreateProductRequest {
  Product product = 1;
}

message GetProductRequest {
  int64 id = 1;
}

message UpdateProductRequest {
  Product product = 1;
}

message DeleteProductRequest {
  int64 id = 1;
}

message ProductResponse {
  Product product = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}

message EmptyResponse {}
